Set project index view + redirection

--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the Projects controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.project-container {
+  float: left;
+
+}
+
+.columns:last-child:not(:first-child) {
+  float: left;
+}
+
+$grid-column-gutter: (
+        small: 20px,
+        medium: 30px,
+);
