--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Tasks</h1>
+<h1>Récapitulatif</h1>
 
 <table>
   <thead>
@@ -32,9 +32,9 @@
         <td><%= task.real_duration %></td>
         <td><%= task.percent_progress %></td>
         <td><%= task.ratio %></td>
-        <td><%= link_to 'Show', task %></td>
-        <td><%= link_to 'Edit', edit_task_path(task) %></td>
-        <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <!--<td>< link_to 'Show', project_task_path(@project, task) %></td>-->
+        <!--<td>< link_to 'Edit', edit_project_task_path(task) %></td>-->
+        <!--<td>< link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>-->
       </tr>
     <% end %>
   </tbody>
@@ -42,4 +42,4 @@
 
 <br>
 
-<%= link_to 'New Task', new_task_path %>
+<%= link_to 'New Task', new_project_task_path %>
