--- a/app/views/activities/_form.html.erb
+++ b/app/views/activities/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@project, @activity], url: project_activities_path, remote: :true, class: 'activity_form') do |f| %>
+<%= simple_form_for([@project, @activity], url: project_activities_path, remote: :true, class: 'activity_form') do |f| %>
   <% if @activity.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@activity.errors.count, "error") %> prohibited this activity from being saved:</h2>
@@ -11,27 +11,10 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :num_hours %><br>
-    <%= f.text_field :num_hours %>
-  </div>
-  <div class="field">
-    <%= f.label :worker_id %><br>
-    <%= f.text_field :worker_id %>
-  </div>
-  <div class="field">
-    <%= f.label :task_id %><br>
-    <%= f.text_field :task_id %>
-  </div>
-  <div class="field">
-    <%= f.label :observation %><br>
-    <%= f.text_area :observation %>
-  </div>
-  <div class="field">
-    <%= f.label :date_activity %><br>
-    <%= f.datetime_select :date_activity %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+    <%= f.input :num_hours, label_html: { class: 'text-right middle' } %><br>
+    <%= f.association :worker, label_method: :name %><br>
+    <%= f.association :task, label_method: :label %><br>
+    <%= f.input :observation %><br>
+    <%= f.input :date_activity, as: :string, input_html: { type: 'datetime' } %><br>
+    <%= f.button :submit %>
 <% end %>
