Updates activity form

--- a/app/views/activities/_activity.js.erb
+++ b/app/views/activities/_activity.js.erb
@@ -1,1 +1,1 @@
-$("#activities").append("<%= escape_javascript(render(partial: 'activity_row'))%>");
+$("#activities").append("<%= escape_javascript(render(partial: 'activity_row', locals: {activity: @activity}))%>");
