--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -2,38 +2,44 @@
 
 <h1>Listing Activities</h1>
 
+<%= simple_form_for([@project, @activity], url: project_activities_path, remote: :true, class: 'activity_form') do |f| %>
+    <% if @activity.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@activity.errors.count, "error") %> prohibited this activity from being saved:</h2>
+
+          <ul>
+            <% @activity.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+    <% end %>
 <table>
   <thead>
     <tr>
-      <th>Num hours</th>
+      <th>Date activity</th>
       <th>Worker</th>
+      <th>Num hours</th>
       <th>Task</th>
       <th>Observation</th>
-      <th>Date activity</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody id="activities">
     <% @activities.each do |activity| %>
-      <tr>
-        <td><%= activity.num_hours %></td>
-        <td><%= activity.worker %></td>
-        <td><%= activity.task %></td>
-        <td><%= activity.observation %></td>
-        <td><%= activity.date_activity %></td>
-        <td><%= link_to 'Show', project_activity_path(@project, activity) %></td>
-        <td><%= link_to 'Edit', edit_project_activity_path(@project, activity) %></td>
-        <td><%= link_to 'Destroy', project_activity_path(@project, activity) , method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <%= render partial: 'activity_row', locals: { activity: activity }%>
     <% end %>
   </tbody>
+  <tfoot>
+    <%= render partial: 'form', locals: {f: f} %>
+  </tfoot>
 </table>
 
 <br>
 
-<%= link_to 'New Activity', new_project_activity_path %>
+<%= link_to 'New Activity', new_project_activity_path, class:'addActivity' %>
+
+<% end %>
 
 
-
-<%= render 'form' %>
