--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -40,7 +40,6 @@
 
 <br>
 
-<%= link_to 'New Project', new_project_path %>
 
 <div class="row">
   <% @projects.each do |project| %>
@@ -51,3 +50,5 @@
       </div>
   <% end %>
 </div>
+
+<%= link_to 'New Project', new_project_path, class: "button newProject" %>
