--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,9 @@
   <body>
 
     <%= render 'top_bar' %>
-    <%= yield %>
+    <div id="core">
+      <%= yield %>
+    </div>
 
   </body>
 </html>
