--- a/app/views/workers/show.html.erb
+++ b/app/views/workers/show.html.erb
@@ -15,5 +15,5 @@
   <%= @worker.cost_hour %>
 </p>
 
-<%= link_to 'Edit', edit_worker_path(@worker) %> |
-<%= link_to 'Back', workers_path %>
+<%= link_to 'Edit', edit_worker_path(@worker), class: 'button' %> |
+<%= link_to 'Back', workers_path, class: 'button secondary' %>
