--- a/app/views/activities/_form.html.erb
+++ b/app/views/activities/_form.html.erb
@@ -1,5 +1,5 @@
 <tr>
-  <td><%= f.input_field :date_activity, as: :string, input_html: { type: 'datetime' } %></td>
+  <td><%= f.input_field :date_activity, as: :string %></td>
   <td><%= f.input_field :worker_id, as: :select, label_method: :name, collection: Worker.all %></td>
   <td><%= f.input_field :num_hours, label_html: { class: 'text-right middle' } %></td>
   <td><%= f.input_field :task_id, as: :select, label_method: :label, collection: Task.where(project: @project) %></td>
