--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -30,11 +30,12 @@
         <td><%= task.real_start_at %></td>
         <td><%= task.real_end_at %></td>
         <td><%= task.real_duration %></td>
-        <td><%= task.percent_progress %></td>
+        <!--<td>< task.percent_progress %></td>-->
+        <td><%= progress task.percent_progress %></td>
         <td><%= task.ratio %></td>
-        <!--<td>< link_to 'Show', project_task_path(@project, task) %></td>-->
-        <!--<td>< link_to 'Edit', edit_project_task_path(task) %></td>-->
-        <!--<td>< link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>-->
+        <td><%= link_to 'Show', project_task_path(@project, task) %></td>
+        <td><%= link_to 'Edit', edit_project_task_path(@project, task) %></td>
+        <td><%= link_to 'Destroy', project_task_path(@project, task), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
