--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -50,5 +50,5 @@
   <%= @task.ratio %>
 </p>
 
-<%= link_to 'Edit', edit_task_path(@task) %> |
-<%= link_to 'Back', tasks_path %>
+<%= link_to 'Edit', edit_project_task_path(@project, @task), class: 'button' %>
+<%= link_to 'Back', project_tasks_path(@project), class: 'button secondary' %>
