--- a/app/views/workers/_form.html.erb
+++ b/app/views/workers/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@worker) do |f| %>
+<%= simple_form_for(@worker) do |f| %>
   <% if @worker.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@worker.errors.count, "error") %> prohibited this worker from being saved:</h2>
@@ -10,20 +10,8 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :firstname %><br>
-    <%= f.text_field :firstname %>
-  </div>
-  <div class="field">
-    <%= f.label :lastname %><br>
-    <%= f.text_field :lastname %>
-  </div>
-  <div class="field">
-    <%= f.label :cost_hour %><br>
-    <%= f.text_field :cost_hour %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  <%= f.input :firstname %>
+  <%= f.input :lastname %>
+  <%= f.input :cost_hour %>
+  <%= f.button :submit, class: 'button' %>
 <% end %>
