--- a/app/views/workers/edit.html.erb
+++ b/app/views/workers/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @worker %> |
-<%= link_to 'Back', workers_path %>
+<%= link_to 'Show', @worker, class: 'button' %> |
+<%= link_to 'Back', workers_path, class: 'button secondary' %>
