--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -4,10 +4,11 @@
 
   <div class="row expanded">
     <div class="small-2 large-4 columns">
-      <%= form_for :setting, :url => update_all_path, :html => { :method => :put } do %>
+      <%= simple_form_for :setting, :url => update_all_settings_path, html: {method: :put} do %>
         <% @settings.each do |setting| %>
-          <%= label_tag(setting.label) %>
-          <%= text_field_tag(setting.id, setting.value) %>
+              <%= simple_fields_for 'setting[]', setting do |setting_fields| %>
+                  <%= setting_fields.input :value, label: setting.label %>
+              <% end %>
         <% end %>
         <div class="actions">
           <%= submit_tag("Submit", class: "button") %>
