--- a/app/views/activities/_activity_row.html.haml
+++ b/app/views/activities/_activity_row.html.haml
@@ -2,8 +2,6 @@
   %td= activity.date_activity.strftime('%d/%m/%Y %H:%M:%S') unless activity.date_activity.nil?
   %td= activity.worker.name unless activity.worker.nil?
   %td= activity.num_hours
-  %td= link_to activity.task.label, activity.task unless activity.task.nil?
+  %td= link_to activity.task.label, project_task_path(@project, activity.task) unless activity.task.nil?
   %td= activity.observation
-  %td= link_to 'Voir', project_activity_path(@project, activity)
-  %td= link_to 'Modifier', edit_project_activity_path(@project, activity)
-  %td= link_to 'Supprimer', project_activity_path(@project, activity), method: :delete, data: { confirm: 'Are you sure?' }
+  %td= [link_to('Voir', project_activity_path(@project, activity)), link_to('Modifier', edit_project_activity_path(@project, activity)), link_to('Supprimer', project_activity_path(@project, activity), method: :delete, data: { confirm: 'Are you sure?' })].join(' | ').html_safe
