--- a/app/views/families/show.html.erb
+++ b/app/views/families/show.html.erb
@@ -5,5 +5,5 @@
   <%= @family.label %>
 </p>
 
-<%= link_to 'Edit', edit_family_path(@family) %> |
-<%= link_to 'Back', families_path %>
+<%= link_to 'Edit', edit_family_path(@family), class: 'small button' %>
+<%= link_to 'Back', families_path, class: 'small secondary button' %>
