--- a/app/views/families/index.html.erb
+++ b/app/views/families/index.html.erb
@@ -1,27 +1,29 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Families</h1>
+<h1>Liste des catégories</h1>
 
-<table>
-  <thead>
+<div class="small-2 large-6">
+  <table>
+    <thead>
     <tr>
-      <th>Label</th>
+      <th>Nom</th>
       <th colspan="3"></th>
     </tr>
-  </thead>
+    </thead>
 
-  <tbody>
+    <tbody>
     <% @families.each do |family| %>
       <tr>
         <td><%= family.label %></td>
-        <td><%= link_to 'Show', family %></td>
-        <td><%= link_to 'Edit', edit_family_path(family) %></td>
-        <td><%= link_to 'Destroy', family, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Voir', family %></td>
+        <td><%= link_to 'Editer', edit_family_path(family) %></td>
+        <td><%= link_to 'Supprimer', family, method: :delete, data: { confirm: 'Êtes-vous sure?' } %></td>
       </tr>
     <% end %>
-  </tbody>
-</table>
+    </tbody>
+  </table>
 
+</div>
 <br>
 
-<%= link_to 'New Family', new_family_path %>
+<%= link_to 'Nouvelle catégorie', new_family_path, class: 'button' %>
