--- a/app/views/families/new.html.erb
+++ b/app/views/families/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Family</h1>
+<div class="row expanded">
+  <div class="small-2 large-4 columns">
+    <h1>Ajout d'une catégorie</h1>
 
-<%= render 'form' %>
+    <%= render 'form' %>
 
-<%= link_to 'Back', families_path %>
+    <%= link_to 'Retour', families_path, class: 'button secondary' %>
+  </div>
+</div>
