--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -38,7 +38,7 @@
 
 <br>
 
-<%= link_to 'Nouvelle activité', new_project_activity_path, class:'addActivity' %>
+<!--<= link_to 'Nouvelle activité', new_project_activity_path, class:'addActivity' %> -->
 
 <% end %>
 
