--- a/app/views/settings/new.html.erb
+++ b/app/views/settings/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Setting</h1>
+<div class="row expanded">
+  <div class="small-2 large-4 columns">
+    <h1>Nouveau paramètre</h1>
 
-<%= render 'form' %>
+    <%= render 'form' %>
 
-<%= link_to 'Back', settings_path %>
+    <%= link_to 'Retour', settings_path, class: 'button secondary' %>
+  </div>
+</div>
