--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -22,5 +22,5 @@
   <%= f.input :real_duration %>
   <%= f.input :percent_progress %>
   <%= f.input :ratio %>
-  <%= f.button :submit %>
+  <%= f.button :submit, value: 'Créer une tâche' %>
 <% end %>
