--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -42,4 +42,4 @@
 
 <br>
 
-<%= link_to 'New Task', new_project_task_path %>
+<%= link_to 'Nouvelle tâche', new_project_task_path, class: 'button' %>
