--- a/app/views/workers/edit.html.erb
+++ b/app/views/workers/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Worker</h1>
+<div class="small-2 large-4 columns">
+  <h1>Editing Worker</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Show', @worker, class: 'button' %> |
-<%= link_to 'Back', workers_path, class: 'button secondary' %>
+  <%= link_to 'Détail', @worker, class: 'button' %>
+  <%= link_to 'Retour', workers_path, class: 'button secondary' %>
+</div>
