--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,11 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Projects</h1>
+<h1>Liste des projets</h1>
 
-<table>
-  <thead>
+
+<div class="small-2 large-10">
+  <table>
+    <thead>
     <tr>
-      <th>Name</th>
+      <th>Nom</th>
       <th>Is close</th>
       <th>Estimated start at</th>
       <th>Estimated end at</th>
@@ -16,9 +18,9 @@
       <th>Difference hour</th>
       <th colspan="3"></th>
     </tr>
-  </thead>
+    </thead>
 
-  <tbody>
+    <tbody>
     <% @projects.each do |project| %>
       <tr>
         <td><%= project.name %></td>
@@ -30,13 +32,14 @@
         <td><%= project.real_end_at %></td>
         <td><%= project.real_duration %></td>
         <td><%= project.difference_hour %></td>
-        <td><%= link_to 'Show', project %></td>
-        <td><%= link_to 'Edit', edit_project_path(project) %></td>
-        <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Voir', project %></td>
+        <td><%= link_to 'Editer', edit_project_path(project) %></td>
+        <td><%= link_to 'Supprimer', project, method: :delete, data: { confirm: 'Êtes vous sure?' } %></td>
       </tr>
     <% end %>
-  </tbody>
-</table>
+    </tbody>
+  </table>
+</div>
 
 <br>
 
