--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Project</h1>
+<div class="row expanded">
+  <div class="small-2 large-4 columns">
+    <h1>New Project</h1>
 
-<%= render 'form' %>
+    <%= render 'form' %>
 
-<%= link_to 'Back', projects_path %>
+    <%= link_to 'Retour', projects_path, class: 'secondary button' %>
+  </div>
+</div>
