--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -1,44 +1,22 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Settings</h1>
 
-  <div class="row expanded">
-    <div class="small-2 large-4 columns">
-      <%= simple_form_for :setting, :url => update_all_settings_path, html: {method: :put} do %>
-        <% @settings.each do |setting| %>
-              <%= simple_fields_for 'setting[]', setting do |setting_fields| %>
-                  <%= setting_fields.input :value, label: setting.label %>
-              <% end %>
-        <% end %>
-        <div class="actions">
-          <%= submit_tag("Submit", class: "button") %>
-        </div>
+<div class="row expanded">
+  <div class="small-2 large-4 columns">
+    <h1>Liste des paramètres</h1>
+    <%= simple_form_for :setting, :url => update_all_settings_path, html: {method: :put} do %>
+      <% @settings.each do |setting| %>
+            <%= simple_fields_for 'setting[]', setting do |setting_fields| %>
+                <%= setting_fields.input :value, label: setting.label %>
+            <% end %>
       <% end %>
-    </div>
-  </div>
-<hr>
-<table>
-  <thead>
-    <tr>
-      <th>Label</th>
-      <th>Value</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @settings.each do |setting| %>
-      <tr>
-        <td><%= setting.label %></td>
-        <td><%= setting.value %></td>
-        <td><%= link_to 'Show', setting %></td>
-        <td><%= link_to 'Edit', edit_setting_path(setting) %></td>
-        <td><%= link_to 'Destroy', setting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <div class="actions">
+        <%= submit_tag("Submit", class: "success button") %>
+      </div>
     <% end %>
-  </tbody>
-</table>
+    <%= link_to 'Nouveau paramètre', new_setting_path, class: "small button" %>
+  </div>
+</div>
 
 <br>
 
-<%= link_to 'New Setting', new_setting_path %>
