--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Task</h1>
+<div class="row expanded">
+  <div class="small-2 large-4 columns">
+    <h1>Nouvelle tâche</h1>
 
-<%= render 'form' %>
+    <%= render 'form' %>
 
-<%= link_to 'Back', project_tasks_path(@project), class: 'button secondary' %>
+    <%= link_to 'Retour', project_tasks_path(@project), class: 'button secondary' %>
+  </div>
+</div>
