--- a/app/views/workers/_form.html.erb
+++ b/app/views/workers/_form.html.erb
@@ -13,5 +13,5 @@
   <%= f.input :firstname %>
   <%= f.input :lastname %>
   <%= f.input :cost_hour %>
-  <%= f.button :submit, class: 'button' %>
+  <%= f.button :submit, class: 'success button' %>
 <% end %>
