--- a/app/views/workers/new.html.erb
+++ b/app/views/workers/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New Worker</h1>
+<div class="small-2 large-4 columns">
+  <h1>Nouveau collaborateur</h1>
+  <%= render 'form' %>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', workers_path, class: 'button secondary' %>
+  <%= link_to 'Back', workers_path, class: 'button secondary' %>
+</div>
