Fixes worker views.

--- a/app/views/workers/_form.html.erb
+++ b/app/views/workers/_form.html.erb
@@ -10,8 +10,7 @@
       </ul>
     </div>
   <% end %>
-  <%= f.input :firstname %>
-  <%= f.input :lastname %>
+  <%= f.input :name %>
   <%= f.input :cost_hour %>
   <%= f.button :submit, class: 'success button' %>
 <% end %>
