--- a/app/views/workers/show.html.erb
+++ b/app/views/workers/show.html.erb
@@ -2,12 +2,7 @@
 
 <p>
   <strong>Prénom:</strong>
-  <%= @worker.firstname %>
-</p>
-
-<p>
-  <strong>Nom:</strong>
-  <%= @worker.lastname %>
+  <%= @worker.name %>
 </p>
 
 <p>
