--- a/app/views/workers/index.html.erb
+++ b/app/views/workers/index.html.erb
@@ -6,7 +6,6 @@
   <table>
     <thead>
     <tr>
-      <th>Prénom</th>
       <th>Nom</th>
       <th>Coût par heure</th>
       <th colspan="3"></th>
@@ -16,8 +15,7 @@
     <tbody>
     <% @workers.each do |worker| %>
       <tr>
-        <td><%= worker.firstname %></td>
-        <td><%= worker.lastname %></td>
+        <td><%= worker.name %></td>
         <td><%= worker.cost_hour %></td>
         <td><%= link_to 'Voir', worker, class: "show" %></td>
         <td><%= link_to 'Editer', edit_worker_path(worker) %></td>
