Updates date inputs.

--- a/app/views/activities/_form.html.haml
+++ b/app/views/activities/_form.html.haml
@@ -1,5 +1,5 @@
 %tr{data: {search: search_project_activities_url(@project)}}
-  %td= f.input_field :date_activity, as: :string
+  %td= f.input_field :date_activity, as: :string, input_html: {type: 'date'}
   %td= f.input_field :worker_id, as: :select, label_method: :name, collection: Worker.all
   %td= f.input_field :num_hours, label_html: { class: 'text-right middle' }
   %td= f.input_field :task_id, as: :select, label_method: :label, collection: Task.where(project: @project)
