--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@project) do |f| %>
+<%= simple_form_for(@project) do |f| %>
   <% if @project.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@project.errors.count, "error") %> prohibited this project from being saved:</h2>
@@ -10,43 +10,14 @@
       </ul>
     </div>
   <% end %>
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :is_close %><br>
-    <%= f.check_box :is_close %>
-  </div>
-  <div class="field">
-      <%= f.label :estimated_start_at %><br>
-      <%= f.date_select :estimated_start_at %>
-  </div>
-  <div class="field">
-    <%= f.label :estimated_end_at %><br>
-    <%= f.date_select :estimated_end_at %>
-  </div>
-  <div class="field">
-    <%= f.label :estimated_duration %><br>
-    <%= f.text_field :estimated_duration %>
-  </div>
-  <div class="field">
-    <%= f.label :real_start_at %><br>
-    <%= f.date_select :real_start_at %>
-  </div>
-  <div class="field">
-    <%= f.label :real_end_at %><br>
-    <%= f.date_select :real_end_at %>
-  </div>
-  <div class="field">
-    <%= f.label :real_duration %><br>
-    <%= f.text_field :real_duration %>
-  </div>
-  <div class="field">
-    <%= f.label :difference_hour %><br>
-    <%= f.date_select :difference_hour %>
-  </div>
-  <div class="actions">
-    <%= f.submit class: 'success button' %>
-  </div>
+    <%= f.input :name %>
+    <%= f.input :is_close %>
+    <%= f.input :estimated_start_at, as: :string, input_html: {type: 'date'} %>
+    <%= f.input :estimated_end_at, as: :string, input_html: {type: 'date'} %>
+    <%= f.input :estimated_duration %>
+    <%= f.input :real_start_at, as: :string, input_html: {type: 'date'} %>
+    <%= f.input :real_end_at, as: :string, input_html: {type: 'date'} %>
+    <%= f.input :real_duration %>
+    <%= f.input :difference_hour %>
+    <%= f.button :submit, class: 'success button' %>
 <% end %>
