--- a/app/views/application/_top_bar.html.erb
+++ b/app/views/application/_top_bar.html.erb
@@ -3,29 +3,29 @@
     <ul class="dropdown menu" data-dropdown-menu>
       <li class="menu-text">Open Project</li>
       <li>
-        <%=link_to "Projets", projects_path %>
+        <%=link_to t(:projects), projects_path %>
       </li>
       <li>
-        <%=link_to "Catégories", families_path %>
+        <%=link_to t(:categories), families_path %>
       </li>
       <li>
-        <%=link_to "Tâches", project_tasks_path(@project) unless @project.nil? or @project.new_record? %>
+        <%=link_to t(:tasks), project_tasks_path(@project) unless @project.nil? or @project.new_record? %>
       </li>
 
       <li>
-        <%=link_to "Activités", project_activities_path(@project) unless @project.nil? or @project.new_record? %>
+        <%=link_to t(:activities), project_activities_path(@project) unless @project.nil? or @project.new_record? %>
       </li>
       <li>
-        <%=link_to "Planning prévisionnel", provisional_schedule_project_tasks_path(@project) unless @project.nil? or @project.new_record? %>
+        <%=link_to t(:provisional_schedule), provisional_schedule_project_tasks_path(@project) unless @project.nil? or @project.new_record? %>
       </li>
       <li>
-        <%=link_to "Collaborateurs", workers_path %>
+        <%=link_to t(:workers), workers_path %>
       </li>
     </ul>
   </div>
   <div class="top-bar-right">
     <ul class="menu">
-      <li><%= link_to " Settings", settings_path, class: "fi-wrench" %></li>
+      <li><%= link_to ' '+ t(:settings), settings_path, class: "fi-wrench" %></li>
     </ul>
   </div>
 </div>
