--- a/app/views/families/_form.html.erb
+++ b/app/views/families/_form.html.erb
@@ -2,10 +2,10 @@
   <%= f.error_notification %>
 
       <div class="form-inputs field">
-        <%= f.input :label %>
+        <%= f.input :label, label: t(:label) %>
       </div>
 
       <div class="form-actions">
-        <%= f.button :submit, class:'success button' %>
+        <%= f.button :submit, class:'success button', value: action %>
       </div>
 <% end %>
