--- a/app/views/families/edit.html.erb
+++ b/app/views/families/edit.html.erb
@@ -1,8 +1,8 @@
 <div class="small-2 large-4 columns">
-  <h1>Editer catégorie</h1>
+  <h1><%= t(:edit_category) %></h1>
 
-  <%= render 'form' %>
+  <%= render 'form', action: t(:edit) %>
 
-  <%= link_to 'Detail', @family, class: 'button' %>
-  <%= link_to 'Retour', families_path, class: 'secondary button' %>
+  <%= link_to t(:show), @family, class: 'button' %>
+  <%= link_to t(:back), families_path, class: 'secondary button' %>
 </div>
