--- a/app/views/families/new.html.erb
+++ b/app/views/families/new.html.erb
@@ -1,9 +1,9 @@
 <div class="row expanded">
   <div class="small-2 large-4 columns">
-    <h1>Ajout d'une catégorie</h1>
+    <h1><%=	t(:new_category) %></h1>
 
-    <%= render 'form' %>
+    <%= render 'form', action: t(:create) %>
 
-    <%= link_to 'Retour', families_path, class: 'button secondary' %>
+    <%= link_to t(:back), families_path, class: 'button secondary' %>
   </div>
 </div>
