--- a/app/views/settings/_form.html.erb
+++ b/app/views/settings/_form.html.erb
@@ -12,14 +12,14 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :label %><br>
+    <%= f.label t(:label) %><br>
     <%= f.text_field :label %>
   </div>
   <div class="field">
-    <%= f.label :value %><br>
+    <%= f.label t(:value) %><br>
     <%= f.text_field :value %>
   </div>
   <div class="actions">
-    <%= f.submit class: 'button' %>
+    <%= f.submit class: 'button', value: action %>
   </div>
 <% end %>
