--- a/app/views/settings/edit.html.erb
+++ b/app/views/settings/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Setting</h1>
+<h1><%=	t(:edit_setting) %></h1>
 
-<%= render 'form' %>
+<%= render 'form', action: t(:edit) %>
 
-<%= link_to 'Show', @setting %> |
-<%= link_to 'Back', settings_path %>
+<%= link_to t(:show), @setting %> |
+<%= link_to t(:back), settings_path %>
