--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -11,16 +11,16 @@
     </div>
   <% end %>
 
-  <%= f.input :code %>
-  <%= f.input :label %>
-  <%= f.input :family_id, as: :select, label_method: :label, collection: Family.all %>
-  <%= f.input :estimated_start_at, as: :string, input_html: {type: 'date'} %>
-  <%= f.input :estimated_end_at, as: :string, input_html: {type: 'date'} %>
-  <%= f.input :estimated_duration %>
-  <%= f.input :real_start_at, as: :string, input_html: {type: 'date'} %>
-  <%= f.input :real_end_at, as: :string, input_html: {type: 'date'} %>
-  <%= f.input :real_duration %>
-  <%= f.input :percent_progress %>
-  <%= f.input :ratio %>
-  <%= f.button :submit, value: 'Créer une tâche' %>
+  <%= f.input :code, label: t(:code) %>
+  <%= f.input :label, label: t(:label) %>
+  <%= f.input :family_id, label: t(:family_id), as: :select, label_method: :label, collection: Family.all %>
+  <%= f.input :estimated_start_at, label: t(:estimated_start_at), as: :string, input_html: {type: 'date'} %>
+  <%= f.input :estimated_end_at,label: t(:estimated_end_at), as: :string, input_html: {type: 'date'} %>
+  <%= f.input :estimated_duration, label: t(:estimated_duration) %>
+  <%= f.input :real_start_at, label: t(:real_start_at), as: :string, input_html: {type: 'date'} %>
+  <%= f.input :real_end_at, label: t(:real_end_at), as: :string, input_html: {type: 'date'} %>
+  <%= f.input :real_duration, label: t(:real_duration) %>
+  <%= f.input :percent_progress, label: t(:percent_progress) %>
+  <%= f.input :ratio, label: t(:ratio) %>
+  <%= f.button :submit, value: action, class: 'success button' %>
 <% end %>
