--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,21 +1,21 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Récapitulatif</h1>
+<h1><%=	t(:summary) %></h1>
 
 <table>
   <thead>
     <tr>
-      <th>Code</th>
-      <th>Label</th>
-      <th>Estimated start at</th>
-      <th>Estimated end at</th>
-      <th>Estimated duration</th>
-      <th>Real start at</th>
-      <th>Real end at</th>
-      <th>Real duration</th>
-      <th>Percent progress</th>
-      <th>Ratio</th>
-      <th>Restant</th>
+      <th><%=	t(:code) %></th>
+      <th><%=	t(:label) %></th>
+      <th><%=	t(:estimated_start_at) %></th>
+      <th><%=	t(:estimated_end_at) %></th>
+      <th><%=	t(:estimated_duration) %></th>
+      <th><%=	t(:real_start_at) %></th>
+      <th><%=	t(:real_end_at) %></th>
+      <th><%=	t(:real_duration) %></th>
+      <th><%=	t(:percent_progress) %></th>
+      <th><%=	t(:ratio) %></th>
+      <th><%=	t(:remaining) %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -47,9 +47,9 @@
         <td><%= progress task.percent_progress %></td>
         <td><%= task.ratio.round(2) %></td>
         <td><%= task.remaining %></td>
-        <td><%= link_to 'Show', project_task_path(@project, task) %></td>
-        <td><%= link_to 'Edit', edit_project_task_path(@project, task) %></td>
-        <td><%= link_to 'Destroy', project_task_path(@project, task), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to t(:show), project_task_path(@project, task) %></td>
+        <td><%= link_to t(:edit), edit_project_task_path(@project, task) %></td>
+        <td><%= link_to t(:destroy), project_task_path(@project, task), method: :delete, data: { confirm: t(:confirm) } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -57,4 +57,4 @@
 
 <br>
 
-<%= link_to 'Nouvelle tâche', new_project_task_path, class: 'button' %>
+<%= link_to t(:new_task), new_project_task_path, class: 'button' %>
