--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,9 +1,9 @@
 <div class="row expanded">
   <div class="small-2 large-4 columns">
-    <h1>Nouvelle tâche</h1>
+    <h1><%=	t(:new_task) %></h1>
 
-    <%= render 'form' %>
+    <%= render 'form', action: t(:create) %>
 
-    <%= link_to 'Retour', project_tasks_path(@project), class: 'button secondary' %>
+    <%= link_to t(:back), project_tasks_path(@project), class: 'button secondary' %>
   </div>
 </div>
