--- a/app/views/workers/_form.html.erb
+++ b/app/views/workers/_form.html.erb
@@ -10,7 +10,7 @@
       </ul>
     </div>
   <% end %>
-  <%= f.input :name %>
-  <%= f.input :cost_hour %>
-  <%= f.button :submit, class: 'success button' %>
+  <%= f.input :name, label: t(:name) %>
+  <%= f.input :cost_hour,label: t(:cost_hour) %>
+  <%= f.button :submit, class: 'success button', value: action %>
 <% end %>
