--- a/app/views/workers/new.html.erb
+++ b/app/views/workers/new.html.erb
@@ -1,6 +1,6 @@
 <div class="small-2 large-4 columns">
-  <h1>Nouveau collaborateur</h1>
-  <%= render 'form' %>
+  <h1><%= t(:new_worker) %></h1>
+  <%= render 'form', action: t(:create) %>
 
-  <%= link_to 'Back', workers_path, class: 'button secondary' %>
+  <%= link_to t(:back), workers_path, class: 'button secondary' %>
 </div>
